kustomize/vote/base/vote_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: instavote
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: schoolofdevops/vote:v4
        name: vote
